2003-11-01  mput <root@mput.dip.jp>

	* timidity/timidity.c (parse_opt_h): Fix in help message
	(parse_opt_j): Enforce returning a int value
	(parse_opt_Z1): ditto
	(parse_opt_fail): Change exit status to EXIT_FAILURE

2003-10-31  Saito <saito2@digitalme.com>

	* timidity/playmidi.c:
	  Fix initialization of drumsets on synthesizer modes.

2003-10-30  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/playmidi.c (set_reverb_level, get_reverb_level):
	  More flexibility for reverb level
	* timidity/timidity.c (parse_opt_reverb): Fix for case 0

2003-10-28  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/playmidi.c, timidity/effect.c, timidity/timidity.c:
	  The user can now set the reverb level of any of the reverb modes.

2003-10-27  Kentaro Sato <kentaro@ranvis.com>

	* timidity/effect.c: Fixed noise shaping filter bug.

2003-10-26  Saito <saito2@digitalme.com>

	* timidity/mix.c, timidity/tables.[ch], playmidi.[ch]:
	  Implement phase difference between left and right experimentally.
	  If you want to disable this function, please #undef "ENABLE_PAN_DELAY".

2003-10-25  skeishi <s_keishi@mutt.freemail.ne.jp>

	* interface/rtsyn.h:
	  Bug fix about TWSYNTH.
	* interface/rtsyn_common.c:
	  Fix timer of TWSYNTH.

2003-10-23  mput <root@mput.dip.jp>

	* timidity/controls.h: Fix signedness for ctl->flags
	* timidity/timidity.c (main): Fix for getopt_long

2003-10-14  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/readmidi.c:
	  Fix around channel layer

2003-10-12  Kentaro Sato <kentaro@ranvis.com>

	* timidity/rcp.c: RCP tempo gradation is supported.

2003-10-11  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.[ch], timidity/readmidi.c:
	  Fix temperament control to fit with channel layer

2003-10-10  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/readmidi.c:
	  Fix around channel layer (GS - maybe completed)

2003-10-08  Takashi Iwai <tiwai@suse.de>

	* timidity/timidity.c: Fixed segfault or error with use of