@@ -1,3 +1,8 @@
+2003-11-01  Saito <saito2@digitalme.com>
+
+	* timidity/sndfont.c:
+	  Fix behaviour of SoundFont's scale-tuning like SB-Live!.
+
 2003-11-01  mput <root@mput.dip.jp>
 
 	* timidity/timidity.c (parse_opt_h): Fix in help message
